--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "jsxImportSource": "solid-js",
     "types": ["vite/client"],
     "noEmit": true,
-    "isolatedModules": false
+    "isolatedModules": false,
+    "resolveJsonModule": true
   }
 }
