--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/mapbox-gl": "^1.13.4",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
@@ -21,6 +22,7 @@
     "@hebcal/core": "^3.42.1",
     "@solidjs/router": "^0.4.2",
     "dayjs": "^1.11.4",
+    "mapbox-gl": "^2.9.2",
     "solid-js": "^1.4.7",
     "tiny-invariant": "^1.2.0"
   }
