--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/mapbox-gl": "^1.13.4",
+    "@types/node": "^18.7.8",
+    "@types/nodemailer": "^6.4.5",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
@@ -20,10 +22,12 @@
   },
   "dependencies": {
     "@hebcal/core": "^3.42.1",
+    "@netlify/functions": "^1.2.0",
     "@solidjs/router": "^0.4.2",
     "@supabase/supabase-js": "^2.0.0-rc.1",
     "dayjs": "^1.11.4",
     "mapbox-gl": "^2.9.2",
+    "nodemailer": "^6.7.8",
     "solid-js": "^1.4.7",
     "tiny-invariant": "^1.2.0"
   }
