--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/supabase-js": "^2.0.0-rc.1",
     "dayjs": "^1.11.4",
     "mapbox-gl": "^2.9.2",
+    "node-fetch": "^3.2.10",
     "nodemailer": "^6.7.8",
     "solid-js": "^1.4.7",
     "tiny-invariant": "^1.2.0"
