--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@netlify/functions": "^1.2.0",
     "@solidjs/router": "^0.4.2",
     "@supabase/supabase-js": "^2.0.0-rc.1",
+    "chart.js": "^3.9.1",
     "dayjs": "^1.11.4",
     "mapbox-gl": "^2.9.2",
     "node-fetch": "^3.2.10",
