--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "vite": "^3.0.0",
-    "vite-plugin-solid": "^2.3.0",
-    "vite-plugin-solid-svg": "^0.4.1"
+    "vite-plugin-pwa": "^0.12.7",
+    "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
     "@hebcal/core": "^3.42.3",
