--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/bad-words": "^3.0.1",
     "@types/mapbox-gl": "^1.13.4",
     "@types/node": "^18.7.8",
     "@types/nodemailer": "^6.4.5",
@@ -26,6 +27,7 @@
     "@netlify/functions": "^1.2.0",
     "@solidjs/router": "^0.4.2",
     "@supabase/supabase-js": "^2.0.0-rc.1",
+    "bad-words": "^3.0.4",
     "chart.js": "^3.9.1",
     "dayjs": "^1.11.4",
     "mapbox-gl": "^2.9.2",
