--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "license": "MIT",
   "devDependencies": {
@@ -15,6 +17,7 @@
     "@types/node": "^18.7.8",
     "@types/nodemailer": "^6.4.5",
     "autoprefixer": "^10.4.8",
+    "cypress": "^10.8.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
